--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -7,8 +7,8 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
       - name: build docker
-        run: docker build -t ${{ secret.IMAGE_TAG }}:$GITHUB_REF_NAME-$GITHUB_RUN_ID .
+        run: docker build -t ${{ secrets.IMAGE_TAG }}:$GITHUB_REF_NAME-$GITHUB_RUN_ID .
       - name: docker login
-        run: docker login -u ${{ secret.DOCKER_LOGIN }} -p ${{ secret.DOCKER_PASSWORD }}
+        run: docker login -u ${{ secrets.DOCKER_LOGIN }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: push
-        run: docker push ${{ secret.IMAGE_TAG }}:$GITHUB_REF_NAME-$GITHUB_RUN_ID
+        run: docker push ${{ secrets.IMAGE_TAG }}:$GITHUB_REF_NAME-$GITHUB_RUN_ID
