--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -12,3 +12,32 @@ jobs:
         run: docker login -u ${{ secrets.DOCKER_LOGIN }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: push
         run: docker push ${{ secrets.IMAGE_TAG }}:$GITHUB_REF_NAME-$GITHUB_RUN_ID
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
+      - name: render config
+        run: |
+          mkdir deploy
+          export IMAGE_TAG=${{ secrets.IMAGE_TAG }}
+          cat docker-compose-ci.yaml | > deploy/docker-compose.yaml
+      - name: copy files
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          password: ${{ secrets.SERVER_PASSWORD }}
+          source: "deploy/docker-compose.yaml"
+          target: "deploy"
+          strip_components: 1
+      - name: run
+        uses: applboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          password: ${{ secrets.SERVER_PASSWORD }}
+          script:
+            cd deploy
+            docker-compose up -d
