--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -3,7 +3,9 @@ version: '3.8'
 services:
 
   app:
-    image: test_flask_app
+    image: $IMAGE_TAG:$GITHUB_REF_NAME-$GITHUB_RUN_ID
+    ports:
+      - "25000:8000"
     command: gunicorn --bind 0.0.0.0:5000 wsgi:app
     restart: always
 
