--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -33,7 +33,7 @@ jobs:
           target: "deploy"
           strip_components: 1
       - name: run
-        uses: applboy/ssh-action@master
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
