--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -38,6 +38,6 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           password: ${{ secrets.SERVER_PASSWORD }}
-          script:
+          script: |
             cd deploy
             docker-compose up -d
