--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -22,7 +22,8 @@ jobs:
         run: |
           mkdir deploy
           export IMAGE_TAG=${{ secrets.IMAGE_TAG }}
-          cat docker-compose-ci.yaml | > deploy/docker-compose.yaml
+          cat docker-compose-ci.yaml | envsubst > deploy/docker-compose.yaml
+
       - name: copy files
         uses: appleboy/scp-action@master
         with:
