--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -41,4 +41,4 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           script: |
             cd deploy
-            docker-compose up -d
+            echo ${{ secrets.SERVER_PASSWORD }} | sudo -S docker-compose up -d
