--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -33,7 +33,7 @@ jobs:
           source: "deploy/docker-compose.yaml"
           target: "deploy"
           strip_components: 1
-      - name: run
+      - name: run app
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
