--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -14,5 +14,5 @@ services:
     ports:
       - 80:80
     volumes:
-      - .nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     restart: always
