--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,8 @@ services:
 
   app:
     image: test_flask_app
-    command: gunicorn --bind 0.0.0.0:5001 wsgi:app
+
+    command: gunicorn --bind 0.0.0.0:5000 wsgi:app
     restart: always
 
   nginx:
@@ -12,5 +13,5 @@ services:
     ports:
       - 80:80
     volumes:
-      - .nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     restart: always
