--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,5 +13,5 @@ services:
     ports:
       - 80:80
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - .nginx.conf:/etc/nginx/conf.d/default.conf
     restart: always
